force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Primary Company Information. Hold for full 10 Years</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>