force-app/main/default/objects/Account/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <description>Average Competitor Administrative Fees. Use annualized amount for a 15 person plan</description>
    <inlineHelpText>Average Competitor Administrative Fees. Use annualized amount for a 15 person plan</inlineHelpText>
    <label>Admin Fee</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>