force-app/main/default/objects/Account/fields/Amount_Due_on_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_on_Invoices__c</fullName>
    <description>Total of all open invoice amounts</description>
    <inlineHelpText>Total of all open invoice amounts</inlineHelpText>
    <label>Amount Due on Invoices</label>
    <summarizedField>Invoice__c.Amount_Due__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>