force-app/main/default/objects/Account/fields/Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Anniversary__c</fullName>
    <formula>TEXT(IF(
DATE(YEAR(Plan_Sold_Date__c), MONTH(TODAY()), DAY(TODAY())) &gt;=
DATE(YEAR(Plan_Sold_Date__c), MONTH(Plan_Sold_Date__c), DAY(Plan_Sold_Date__c)),
YEAR(TODAY()) - YEAR(Plan_Sold_Date__c),
YEAR(TODAY() - 1) - YEAR(Plan_Sold_Date__c))) +
(IF
(NOT(ISNULL(Plan_Sold_Date__c)),
IF(YEAR(TODAY()) - YEAR(Plan_Sold_Date__c) = 1,&quot; Year&quot;,&quot; Years&quot;), 
null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversary</label>
    <type>Text</type>
</CustomField>