force-app/main/default/objects/Account/fields/Asset_Based_Fees__c.field-meta.xml
<CustomField>
    <fullName>Asset_Based_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this provider charge asset based fees.</description>
    <inlineHelpText>Does this provider charge asset based fees.</inlineHelpText>
    <label>Asset Based Fees</label>
    <type>Checkbox</type>
</CustomField>