force-app/main/default/objects/Account/fields/Asset_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Asset_Fee_Amount__c</fullName>
    <description>In basis points (bps)</description>
    <inlineHelpText>In basis points (bps)</inlineHelpText>
    <label>Asset Fee Amount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>