force-app/main/default/objects/Account/fields/Asset_Manager__c.field-meta.xml
<CustomField>
    <fullName>Asset_Manager__c</fullName>
    <label>Asset Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morningstar</fullName>
            </value>
            <value>
                <fullName>Globalt</fullName>
            </value>
            <value>
                <fullName>Prudent</fullName>
            </value>
            <value>
                <fullName>FPR</fullName>
            </value>
            <value>
                <fullName>Loring Ward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>