force-app/main/default/objects/Account/fields/AUM_Assets_Under_Management_in_millions__c.field-meta.xml
<CustomField>
    <fullName>AUM_Assets_Under_Management_in_millions__c</fullName>
    <description>Assets under management or recordkeeping. Record in millions.</description>
    <inlineHelpText>Assets under management or recordkeeping. Record in millions.</inlineHelpText>
    <label>AUM(Assets Under Management in millions)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>