force-app/main/default/objects/Account/fields/Auto_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This plan has selected Auto Enrollment.</description>
    <inlineHelpText>This field should be checked by Sales if a plan has selected Auto Enrollment.</inlineHelpText>
    <label>Auto Enrollment</label>
    <type>Checkbox</type>
</CustomField>