force-app/main/default/objects/Account/fields/BD_Parent__c.field-meta.xml
<CustomField>
    <fullName>BD_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (BD Parent)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>