force-app/main/default/objects/Account/fields/BD_Type__c.field-meta.xml
<CustomField>
    <fullName>BD_Type__c</fullName>
    <label>BD Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Commission &amp; Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>