force-app/main/default/objects/Account/fields/Billed_Employee_Tier__c.field-meta.xml
<CustomField>
    <fullName>Billed_Employee_Tier__c</fullName>
    <description>Employee pricing tier from most recent invoice item</description>
    <inlineHelpText>Employee pricing tier of invoices</inlineHelpText>
    <label>Billed Employee Tier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>