force-app/main/default/objects/Account/fields/Billed_Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Billed_Service_Option__c</fullName>
    <description>Most recent service option pulled from invoice line items</description>
    <inlineHelpText>Service option from most recent invoice</inlineHelpText>
    <label>Billed Service Option</label>
    <length>50</length>
    <type>Text</type>
</CustomField>