force-app/main/default/objects/Account/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <description>As of Sep 2020- If any invoices are open 20+ days, Account is &quot;Behind&quot; on billing status.   This will auto update with nightly invoice updates from NetSuite.   This will also push to Plan object and will continue to be a part of the client health score.</description>
    <inlineHelpText>As of Sep 2020- If any invoices are open 20+ days, Account is &quot;Behind&quot; on billing status.   This will auto update with nightly invoice updates from NetSuite</inlineHelpText>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Behind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>