force-app/main/default/objects/Account/fields/BizIndustryUpdate__c.field-meta.xml
<CustomField>
    <fullName>BizIndustryUpdate__c</fullName>
    <description>Hidden field used for Account List View/InLine Editing</description>
    <inlineHelpText>Hidden field used for Account List View/InLine Editing</inlineHelpText>
    <label>BizIndustryUpdate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>