force-app/main/default/objects/Account/fields/Box_Docusign_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_Docusign_Folder_Id__c</fullName>
    <description>The subfolder under the account&apos;s folder for docusign records auto migrated from salesforce</description>
    <label>Box Docusign Folder Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>