force-app/main/default/objects/Account/fields/Box_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder_Id__c</fullName>
    <description>Used to link box folders to accounts</description>
    <label>Box Folder Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>