force-app/main/default/objects/Account/fields/Box_Folder_Linked__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated when an account is linked to the client folder in box.</description>
    <label>Box Folder Linked</label>
    <type>Checkbox</type>
</CustomField>