force-app/main/default/objects/Account/fields/Broker_CRD__c.field-meta.xml
<CustomField>
    <fullName>Broker_CRD__c</fullName>
    <label>Broker CRD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>