force-app/main/default/objects/Account/fields/Business_Entity_PRKS__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_PRKS__c</fullName>
    <description>Business Entity input from Paradigm</description>
    <inlineHelpText>Business Entity input from Paradigm</inlineHelpText>
    <label>Business Entity PRKS</label>
    <length>24</length>
    <type>Text</type>
</CustomField>