force-app/main/default/objects/Account/fields/Business_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Start_Date__c</fullName>
    <inlineHelpText>What is the start date of the business?</inlineHelpText>
    <label>Business Start Date</label>
    <type>Date</type>
</CustomField>