force-app/main/default/objects/Account/fields/Campaign_code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_code__c</fullName>
    <label>Campaign code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>