force-app/main/default/objects/Account/fields/Census_Complete__c.field-meta.xml
<CustomField>
    <fullName>Census_Complete__c</fullName>
    <description>Calculates the percentage of employees who have been entered for census.</description>
    <formula>Count_of_Employees_Census__c / NumberOfEmployees</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the percentage of employees who have been entered for census.</inlineHelpText>
    <label>Census Complete %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>