force-app/main/default/objects/Account/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the account is a client</inlineHelpText>
    <label>Client</label>
    <type>Checkbox</type>
</CustomField>