force-app/main/default/objects/Account/fields/Client_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Client_Sentiment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The vibe of this account using the combined averages of recent NPS, CSAT, and review scores.</description>
    <label>Client Sentiment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>