force-app/main/default/objects/Account/fields/Client_Support_Teams__c.field-meta.xml
<CustomField>
    <fullName>Client_Support_Teams__c</fullName>
    <description>Here is where we list which of our internal service teams handle this account.</description>
    <inlineHelpText>Here is where we list which of our internal service teams handle this account.</inlineHelpText>
    <label>CST (Client Support Team)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Support</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>