force-app/main/default/objects/Account/fields/Competitive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Summary__c</fullName>
    <label>Competitive Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>