force-app/main/default/objects/Account/fields/Competitive_Threat_Level__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Threat_Level__c</fullName>
    <description>How much of threat is this competitor to Ubiquity?</description>
    <inlineHelpText>How much of threat is this competitor to Ubiquity?</inlineHelpText>
    <label>Competitive Threat Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>