force-app/main/default/objects/Account/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked will show the competitor details fields on account page</description>
    <inlineHelpText>Check this box if the account is a competitor</inlineHelpText>
    <label>Competitor</label>
    <type>Checkbox</type>
</CustomField>