force-app/main/default/objects/Account/fields/Connected_Partner__c.field-meta.xml
<CustomField>
    <fullName>Connected_Partner__c</fullName>
    <description>Partner with shared SLAs</description>
    <inlineHelpText>Partner with shared SLAs</inlineHelpText>
    <label>Connected Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chase Bank</fullName>
            </value>
            <value>
                <fullName>JPM</fullName>
            </value>
            <value>
                <fullName>Schwab</fullName>
            </value>
            <value>
                <fullName>Simply Retirement</fullName>
            </value>
            <value>
                <fullName>Pensionmark</fullName>
            </value>
            <value>
                <fullName>Sallus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>