force-app/main/default/objects/Account/fields/Controlled_Affiliated_Group__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Affiliated_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this company part of a controlled/affiliated group? Please add any relevant notes in the notes field.</description>
    <inlineHelpText>Is this company part of a controlled/affiliated group? Please add any relevant notes in the notes field.</inlineHelpText>
    <label>Controlled/Affiliated Group</label>
    <type>Checkbox</type>
</CustomField>