force-app/main/default/objects/Account/fields/Costco_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Costco_Member_ID__c</fullName>
    <label>Costco Member ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>