force-app/main/default/objects/Account/fields/Costco_Member_Level__c.field-meta.xml
<CustomField>
    <fullName>Costco_Member_Level__c</fullName>
    <label>Costco Member Level</label>
    <length>128</length>
    <type>Text</type>
</CustomField>