force-app/main/default/objects/Account/fields/Count_of_Employees_Census__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Employees_Census__c</fullName>
    <label>Count of Employees (Census)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>