force-app/main/default/objects/Account/fields/CSAT_Average__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Average__c</fullName>
    <description>The average CSAT score from the past 6 months.</description>
    <inlineHelpText>The average CSAT score from the past 6 months.</inlineHelpText>
    <label>CSAT Average</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>