force-app/main/default/objects/Account/fields/Current_Google_Review_Rating__c.field-meta.xml
<CustomField>
    <fullName>Current_Google_Review_Rating__c</fullName>
    <description>Google Review rating at time of last shopping.</description>
    <inlineHelpText>Google Review rating at time of last shopping.</inlineHelpText>
    <label>Current Google Review Rating</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>