force-app/main/default/objects/Account/fields/Current_Plan__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan__c</fullName>
    <inlineHelpText>This information will come in from the Find the Right Plan Tool.  Can be manually overwritten.</inlineHelpText>
    <label>Current Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>Defined Benefit</fullName>
            </value>
            <value>
                <fullName>KEOGH</fullName>
            </value>
            <value>
                <fullName>Money Purchase</fullName>
            </value>
            <value>
                <fullName>SEP IRA</fullName>
            </value>
            <value>
                <fullName>SIMPLE</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>