force-app/main/default/objects/Account/fields/Customer_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lost_Date__c</fullName>
    <label>Customer Lost Date</label>
    <type>Date</type>
</CustomField>