force-app/main/default/objects/Account/fields/Date_last_shopped__c.field-meta.xml
<CustomField>
    <fullName>Date_last_shopped__c</fullName>
    <description>Date this competitor was last shopped for competitive analysis.</description>
    <label>Date last shopped</label>
    <type>Date</type>
</CustomField>