force-app/main/default/objects/Account/fields/Deferral_Integration_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Integration_Enabled__c</fullName>
    <label>Deferral Integration Enabled</label>
    <type>Date</type>
</CustomField>