force-app/main/default/objects/Account/fields/DesiredPlanStartDate__c.field-meta.xml
<CustomField>
    <fullName>DesiredPlanStartDate__c</fullName>
    <label>Desired Plan Start Date</label>
    <type>Date</type>
</CustomField>