force-app/main/default/objects/Account/fields/Docs_Signed_for_PRKS__c.field-meta.xml
<CustomField>
    <fullName>Docs_Signed_for_PRKS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box gets checked when Imp Stage hits &quot;Docs Signed&quot; Imp Stage. Field can be deleted after PRKS process is ironed out.</description>
    <inlineHelpText>Box gets checked when Imp Stage hits &quot;Docs Signed&quot; Imp Stage</inlineHelpText>
    <label>Docs Signed for PRK</label>
    <type>Checkbox</type>
</CustomField>