force-app/main/default/objects/Account/fields/Employer_Identification_Number_EIN__c.field-meta.xml
<CustomField>
    <fullName>Employer_Identification_Number_EIN__c</fullName>
    <description>Enter the EIN</description>
    <externalId>true</externalId>
    <inlineHelpText>Format=XXXXXXXXX</inlineHelpText>
    <label>Employer Identification Number (EIN)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>