force-app/main/default/objects/Account/fields/Estimated_1st_Year_Total_Conv_Plan_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_1st_Year_Total_Conv_Plan_Cost__c</fullName>
    <description>Estimated cost of 1st year of service by the provider. Assumes a 15 participant, conversion plan with and average of $20k in assets per participant.</description>
    <inlineHelpText>Estimated cost of 1st year of service by the provider. Assumes a 15 participant, conversion plan with and average of $20k in assets per participant.</inlineHelpText>
    <label>Estimated 1st Year Total Conv. Plan Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>