force-app/main/default/objects/Account/fields/Estimated_Integration_Completion__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Integration_Completion__c</fullName>
    <label>Estimated Integration Completion</label>
    <type>Date</type>
</CustomField>