force-app/main/default/objects/Account/fields/Estimated_Total__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total__c</fullName>
    <description>Estimated cost of 1st year of service by the provider. Assumes 15 participants and startup plan.</description>
    <inlineHelpText>Estimated cost of 1st year of service by the provider. Assumes 15 participants and startup plan.</inlineHelpText>
    <label>Estimated 1st Year Total New Plan Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>