force-app/main/default/objects/Account/fields/Fee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fee_Notes__c</fullName>
    <description>Detail on competitor fees being charged.</description>
    <inlineHelpText>Detail on competitor fees being charged.</inlineHelpText>
    <label>Fee Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>