force-app/main/default/objects/Account/fields/Finch_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Finch_Implementation__c</fullName>
    <description>If Finch T&amp;C has a date and the Finch Opt-Out is FALSE, it is a Finch Imp</description>
    <formula>IF(NOT(ISBLANK(Finch_T_C__c )) &amp;&amp; NOT(ISPICKVAL(Finch_Opt_Out__c, &quot;Yes&quot;)), TRUE, FALSE)</formula>
    <inlineHelpText>If Finch T&amp;C has a date and the Finch Opt-Out is FALSE, it is a Finch Imp</inlineHelpText>
    <label>Finch Implementation</label>
    <type>Checkbox</type>
</CustomField>